--- a/app/Rmd/intro_FR.Rmd
+++ b/app/Rmd/intro_FR.Rmd
@@ -49,23 +49,8 @@ site <- sf::st_centroid(studyArea)
 ```
 
 ```{r parameters-for-area_map.r, echo=FALSE, include=FALSE, cache=FALSE}
-# The following defines studyBox geometry "look". studyBox_geom is input into area map or can be added to any map later
-studyBox_geom <- geom_sf(data=studyArea, fill=NA, col="red", size=1)
-
-# The following plots area map using function (output is a list)
-areaMapList<-area_map(studyArea, site, land50k_sf, 5, bounds_sf, studyBox_geom)
-
-# The following separates items in the output list: first item is a map and second is a bounding box of the map
-areaMap=areaMapList[[1]] # map
-bboxMap=areaMapList[[2]] #bounding box of the map
-```
-
-```{r parameters-for-region_map.r, echo=FALSE, include=FALSE, cache=FALSE}
-# Bounding box for the region
-regionBox <- sf::st_bbox(region)
-
-# Create the regional map
-regionMap <- region_map(regionBox, studyArea, land10m_sf, bounds_sf)  
+mapDataList <- maps_setup(studyArea, site, region, land50k_sf, land10m_sf, bounds_sf)
+list2env(mapDataList, envir = environment())
 ```
 
 <!-- # ```{r child = c('../Rmd/report_cetaceans_EN.Rmd', 'report_fish_EN.Rmd', 'report_habitat_EN.Rmd', 'report_planning_EN.Rmd', 'report_SARA_EN.Rmd')} -->
