--- a/app/Rmd/intro_FR.Rmd
+++ b/app/Rmd/intro_FR.Rmd
@@ -30,11 +30,12 @@ knitr::opts_chunk$set(echo = FALSE, warning=FALSE, message=FALSE, fig.align="lef
 
 ```{r load-data-and-functions, echo=FALSE, include=FALSE, cache=FALSE}
 minYear <- 2010
+lapply(list.files("../R", pattern = ".[Rr]$", full.names = TRUE),source) # check helpers.R for a list of packages
+copy_rdata_files() # make sure data files are up do date.
 load("../data/OpenData.RData")
 load("../data/OpenData_sardist.RData")
 load("../data/SecureData.RData")
 #load("\\\\ent.dfo-mpo.ca\\ATLShares\\Science\\BIODataSvc\\SRC\\Reproducible_Reporting\\data\\SecureData.Rdata")
-lapply(list.files("../R", pattern = ".[Rr]$", full.names = TRUE),source) # check helpers.R for a list of packages
 ```
 
 ```{r Load-Search-Area, echo=FALSE, include=FALSE, cache=FALSE}
