--- a/app/Rmd/report_fish_EN.Rmd
+++ b/app/Rmd/report_fish_EN.Rmd
@@ -226,7 +226,7 @@ OCEARCH is a data-centric organization built to help scientists collect previous
 
 
 ```{r ocearch-results, include=FALSE, cache=FALSE}
-ocearchOutputList <- master_intersect(ocearch_sf, region, studyArea, mapBbox = bboxMap, Year = minYear)
+ocearchOutputList <- master_intersect(ocearch_sf, mapDataList)
 
 ```
 
@@ -242,10 +242,9 @@ Report_ocearch <- if (is.null(ocearchOutputList)) {
 Report_obis<-noquote(Report_ocearch)
 writeLines(Report_ocearch)
 ```
-```{r, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: none. Map showing the search area defined by the user (red outline) was used to query information from OCEARCH Shark Tracker observation records, for White Shark. Dataset set has not yet been completely error-checked. The absence of a species in this figure should be interpreted as an absence of tracking data, not necessarily as an absence of the species in the area.'}
+```{r ocearch-plot, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: none. Map showing the search area defined by the user (red outline) was used to query information from OCEARCH Shark Tracker observation records, for White Shark. Dataset set has not yet been completely error-checked. The absence of a species in this figure should be interpreted as an absence of tracking data, not necessarily as an absence of the species in the area.'}
 if (!is.null(ocearchOutputList)) {
-  areaMap +
-    geom_point(data = ocearchOutputList$mapPoints, aes(x = long, y = lat), size = 2, shape = 16, col = "black")
+  plot_rr_sf(areaMap, ocearchOutputList$mapPoints)
 }
 ```
 
