--- a/app/Rmd/report_habitat_FR.Rmd
+++ b/app/Rmd/report_habitat_FR.Rmd
@@ -26,7 +26,7 @@ poly_sf <- rockweed_sf
 attribute <- "RWP"
 
 # intersect polyData with 3 polygons (region, map area, and study box)
-clipped <- master_intersect(poly_sf, region, studyArea, bboxMap)
+clipped <- master_intersect(poly_sf, mapDataList)
 ```
 *
 ```{r overlap rockweed output, echo=FALSE, results='asis'}
@@ -38,17 +38,17 @@ polyText<-if(is.null(clipped$studyData)){"Il n’existe aucun registre pertinent
  writeLines(polyText)
 ```
 
-```{r, fig.height=8, fig.width=11, fig.cap='Niveau de qualité : Moyenne. Niveau de sécurité : Aucun. Carte montrant la zone de recherche définie par l’utilisateur : l’emplacement du projet ou de l’activité proposé est surligné en jaune (polygone d’entrée), entouré d’une zone exposée ou d’une zone tampon définie par l’utilisateur en bleu. La figure illustre le chevauchement entre la zone de recherche et les cartes satellitaires de la végétation intertidale et des polygones de présence de fucus.'}
+```{r rockweed-plot, fig.height=8, fig.width=11, fig.cap='Niveau de qualité : Moyenne. Niveau de sécurité : Aucun. Carte montrant la zone de recherche définie par l’utilisateur : l’emplacement du projet ou de l’activité proposé est surligné en jaune (polygone d’entrée), entouré d’une zone exposée ou d’une zone tampon définie par l’utilisateur en bleu. La figure illustre le chevauchement entre la zone de recherche et les cartes satellitaires de la végétation intertidale et des polygones de présence de fucus.'}
 if(!is.null(clipped$studyData)){print(
-  plot_polygons(areaMap, bboxMap, studyBox_geom, clipped$mapData,attribute))}
+  plot_rr_sf(areaMap, clipped$mapData, attribute))}
 ```
 
-```{r table rockweed, echo=FALSE, cache=FALSE, include = FALSE}
+```{r table-rockweed, echo=FALSE, cache=FALSE, include = FALSE}
 if(!is.null(clipped$studyData)){
   rwTable <- rockweedStats(clipped$studyData, studyArea)}
 ```
 
-```{r}
+```{r rockweed-table}
 if(!is.null(clipped$studyData)){
 knitr::kable(rwTable,align="l",
              caption = "Nombre de polygones de végétation et la superficie occupée par chaque catégorie pour la zone d’étude. La végétation intertidale totale est la somme de tous les catégories.", booktabs = T, escape = F, linesep="") %>%
